# multi-channel-service

./: .Claude  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.claude/expertise/: project.yaml
.github/workflows/: ci.yml
REQ/: REQ-1.md
deploy/: .gcp-setup-output.txt  Dockerfile.cloudrun  README.md  api-gateway-spec.yaml  deploy-manual.sh  env.production  setup-gcp.sh
docs/: ISSUE_DROP_PENDING.md
expertise/: project.yaml
scripts/: validate_env.py
src/telegram_bot/: __init__.py  app.py  entrypoint.py  logging_config.py  main.py
src/telegram_bot/bot/handlers/: __init__.py  message_handler.py
src/telegram_bot/callbacks/: __init__.py  callback_data.py  product_callbacks.py
src/telegram_bot/components/: __init__.py  product_card.py
src/telegram_bot/config/: __init__.py  settings.py
src/telegram_bot/locales/: buttons.json  messages.json
src/telegram_bot/services/: __init__.py  input_classifier.py  internal_client.py  message_processor.py  product_cache.py  webhook_service.py
src/telegram_bot/templates/: __init__.py
src/telegram_bot/templates/products/: list_products.j2  media_caption.j2
src/telegram_bot/templates/prompts/: document_analysis.j2
src/telegram_bot/tests/: conftest.py  test_input_classifier.py  test_internal_client.py  test_message_processor.py  test_settings.py  test_templates.py  test_webhook_e2e.py  test_webhook_service.py
src/telegram_bot/utils/: __init__.py  formatting.py  i18n.py  typing_indicator.py
tests/e2e/: run_bant_e2e_tests.sh  test_bant_integration_e2e.py
