[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-bot"
version = "0.1.0"
description = "Enterprise Telegram Bot with Webhook using aiogram and FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Odiseo", email = "odiseo@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "aiogram>=3.13.0,<4.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    # Google Cloud dependencies for Cloud Run
    "google-auth>=2.25.0,<3.0.0",
    "httpx[http2]>=0.27.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.7.0,<1.0.0",
    "mypy>=1.12.0,<2.0.0",
    "black>=24.10.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "bandit>=1.7.0,<2.0.0",
]

[project.scripts]
telegram-bot = "telegram_bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_bot"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["src/telegram_bot/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --cov=src/telegram_bot --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiogram.*"]
ignore_missing_imports = true
